Updated packs and projects Updated dependencies

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,7 +20,7 @@ const currentYear = new Date().getFullYear();
 					title="Built with Astro"
 					aria-label="Built with Astro"
 				>
-					<AstroIcon size={24} class="fill-current" />
+					<AstroIcon width={24} height={24} class="fill-current" />
 				</a>
 				<a
 					href="https://github.com/arumi-s/arumi-top"
@@ -30,7 +30,7 @@ const currentYear = new Date().getFullYear();
 					title="Website Repository"
 					aria-label="Website Repository"
 				>
-					<GitHubIcon size={24} class="fill-current" />
+					<GitHubIcon width={24} height={24} class="fill-current" />
 				</a>
 			</div>
 		</div>
