--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import GitHubIcon from "@/assets/icons/github.svg";
 				</li>
 				<li>
 					<a href="https://github.com/arumi-s" target="_blank" rel="noopener noreferrer" class="text-gray-800 hover:text-primary-900 transition-colors">
-						<GitHubIcon size={20} class="fill-current" />
+						<GitHubIcon width={20} height={20} class="fill-current" />
 					</a>
 				</li>
 			</ul>
